@startuml
class ServiceCenterControl {
    + ServiceCenterControl(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + <<async>> Update(id:string, template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:ServiceCenter) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> Delete(template:ServiceCenter) : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepositoryIn`1"<T> {
}
class "GenericRepositoryOut`1"<T> {
}
"IUserInterfaceCRUD`1" "<ServiceCenter>" <|-- ServiceCenterControl
ServiceCenterControl --> "ServiceCenterRepositoryIn<ServiceCenter>" "GenericRepositoryIn`1"
ServiceCenterControl --> "ServiceCenterRepositoryOut<ServiceCenter>" "GenericRepositoryOut`1"
ServiceCenterControl --> "UserRepositoryIn<User>" "GenericRepositoryIn`1"
ServiceCenterControl --> "UserRepositoryOut<User>" "GenericRepositoryOut`1"
ServiceCenterControl o-> "settings" JsonSerializerSettings
@enduml
